--- a/src/main/webapp/WEB-INF/jdbc.properties
+++ b/src/main/webapp/WEB-INF/jdbc.properties
@@ -2,4 +2,4 @@ jdbc.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 jdbc.dialect=com.dao.sessionFactory.CustomDialect
 jdbc.databaseurl=jdbc:sqlserver://VMSGWMSDBUT4;databaseName=TWWMS
 jdbc.username=stanhsu
-jdbc.password=XXXX
+jdbc.password=XXX
