--- a/src/main/webapp/WEB-INF/classes/log4j.properties
+++ b/src/main/webapp/WEB-INF/classes/log4j.properties
@@ -1,5 +1,5 @@
 log4j.rootLogger=INFO,ERROR, console, logfile
-
+log4j.logger.org.hibernate.SQL=debug
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern=%d %-5p  - %m%n
